# virtio-ipc

./: Cargo.toml  README.md
examples/: bench_ipc.rs  process_send_recv.rs  send_recv.rs
src/: device.rs  driver.rs  lib.rs  main.rs
