[package]
name = "virtio-ipc"
version = "0.1.0"
edition = "2024"

[features]
debug-log = ["log"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11.11"
nix = { version = "0.31", features = ["fs", "mman", "process"] }
rand = "0.8"
